--- a/render.yaml
+++ b/render.yaml
@@ -10,3 +10,6 @@ services:
     envVars:
       - key: ZOOM_WEBHOOK_SECRET_TOKEN
         sync: false
+      - key: N8N_WEBHOOK_URL
+        value: https://n8n.crogallcapital.com/webhook/zoom-webinar-ended
+        sync: false
