--- a/example.env
+++ b/example.env
@@ -1,2 +1,2 @@
-ZOOM_WEBHOOK_SECRET_TOKEN="jm629ky9QF6HK2D7EsiJOg"
+ZOOM_WEBHOOK_SECRET_TOKEN=jm629ky9QF6HK2D7EsiJOg
 N8N_WEBHOOK_URL=https://n8n.crogallcapital.com/webhook/zoom-webinar-ended
