--- a/example.env
+++ b/example.env
@@ -3,3 +3,6 @@ N8N_WEBHOOK_URL=https://n8n.crogallcapital.com/webhook/zoom-webinar-ended
 ZOOM_ACCOUNT_ID=OQ9syGX8TxuUG3XToMRnjw
 ZOOM_CLIENT_ID=VAGRO0oCSVOFSS5W5JRxOQ
 ZOOM_CLIENT_SECRET=Kl9Xj3nhG52bjmgt9XtYaAx71pqbKM0G
+
+N8N_WEBHOOK_URL_START=https://n8n.crogallcapital.com/webhook/zoom-webinar-started
+
