--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,10 @@
 services:
   - type: web
-    name: Zoom Video SDK Auth Sample
+    name: Webhook Zoom
     runtime: node
     buildCommand: npm install express axios crypto dotenv
     startCommand: npm start
-    repo: https://github.com/zoom/webhook-sample
+    repo: https://https://github.com/grodriguezc1/webhook-zoom
     rootDir: .
     plan: free
     envVars:
