--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "webhook-zoom",
+  "name": "Zoom Webhook sample",
   "description": "Receive Zoom webhooks.",
-  "repository": "https://github.com/grodriguezc1/webhook-zoom",
+  "repository": "https://github.com/zoom/webhook-sample-node.js",
   "logo": "https://avatars1.githubusercontent.com/u/29114944?s=200&v=4",
   "keywords": ["zoom", "webhook", "node.js", "express"],
   "env": {
