Update example.env with new webhook URLs

--- a/example.env
+++ b/example.env
@@ -1,8 +1,46 @@
+# ============================================================
+# ZOOM WEBHOOK PROCESSOR + WHATSAPP
+# Variables de Entorno
+# ============================================================
+
+# Puerto del servidor
+PORT=3000
+
+# ============================================================
+# ZOOM API (Obligatorias)
+# ============================================================
+
+# Secret Token del Webhook de Zoom (para validar firmas)
 ZOOM_WEBHOOK_SECRET_TOKEN=XIC9Gaj2Q56-ScxZXyH3sQ
-N8N_WEBHOOK_URL=https://n8n.crogallcapital.com/webhook/zoom-webinar-ended
+
+# Credenciales OAuth Server-to-Server
 ZOOM_ACCOUNT_ID=OQ9syGX8TxuUG3XToMRnjw
 ZOOM_CLIENT_ID=VAGRO0oCSVOFSS5W5JRxOQ
 ZOOM_CLIENT_SECRET=Kl9Xj3nhG52bjmgt9XtYaAx71pqbKM0G
 
-N8N_WEBHOOK_URL_START=https://n8n.crogallcapital.com/webhook/zoom-webinar-started
+# ============================================================
+# N8N WEBHOOKS - ZOOM EVENTS (Obligatorias)
+# ============================================================
+
+# Webhook para cuando termina un webinar
+N8N_WEBHOOK_URL=https://n8n.crogallcapital.com/webhook/webinar-ended
+
+# Webhook para cuando inicia un webinar
+N8N_WEBHOOK_URL_START=https://n8n.crogallcapital.com/webhook/webinar-started
+
+# ============================================================
+# N8N WEBHOOKS - WHATSAPP (Opcionales - para el bot)
+# ============================================================
+
+# Webhook de n8n que procesa los comandos de WhatsApp
+# Este es el que creamos con el workflow Zoom Master
+N8N_WEBHOOK_WHATSAPP=https://n8n.crogallcapital.com/webhook/zoom-whatsapp-master
+
+# ============================================================
+# WHATSAPP API (Opcional - para el bot)
+# ============================================================
+
+# URL de tu servidor whatsapp-web.js para enviar mensajes
+# Este endpoint recibe {to, message} y envía por WhatsApp
+WHATSAPP_API_URL=http://twkkgwww0044osok8ksgswgs.178.156.171.168.sslip.io/send-message
 
